file info(size, date..) add

--- a/app/download.html
+++ b/app/download.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <title>Dropbox</title>
     </head>
     <body>
@@ -12,5 +13,9 @@
             // You can also require other files to run in this process
             require('./download.js')
         </script>
+        <div id="tooltip">
+            <span id="size"></span>
+            <span id="date"></span>
+        </div>
     </body>
 </html>
